--- a/pipelinerBackend/pipeliner/projects/DjangoDemo/models/newModel/args.yaml
+++ b/pipelinerBackend/pipeliner/projects/DjangoDemo/models/newModel/args.yaml
@@ -1,76 +1,87 @@
 task: segment
 mode: train
-model: yolov8m-seg.yaml
-data: /content/drive/MyDrive/datasets/data.yaml
-epochs: 500
+model: /teamspace/studios/this_studio/projects/outputSticker/weights/last.pt
+data: /teamspace/studios/this_studio/outputSticker/data.yaml
+epochs: 300
+time: null
 patience: 50
-batch: 16
-imgsz: 640
+batch: -1
+imgsz: 1024
 save: true
+save_period: -1
 cache: false
-device: ''
+device: 0
 workers: 8
-project: null
-name: yolov8m_NewData
+project: projects
+name: outputSticker
 exist_ok: false
-pretrained: false
-optimizer: SGD
+pretrained: true
+optimizer: auto
 verbose: true
 seed: 0
 deterministic: true
 single_cls: false
-image_weights: false
 rect: false
 cos_lr: false
 close_mosaic: 10
-resume: false
+resume: /teamspace/studios/this_studio/projects/outputSticker/weights/last.pt
+amp: true
+fraction: 1.0
+profile: false
+freeze: null
+multi_scale: false
 overlap_mask: true
 mask_ratio: 4
-dropout: false
-val: true
+dropout: 0.0
+val: false
+split: val
 save_json: false
 save_hybrid: false
-conf: 0.001
+conf: null
 iou: 0.7
 max_det: 300
 half: false
 dnn: false
 plots: true
-source: ultralytics/assets/
-show: false
-save_txt: false
-save_conf: false
-save_crop: false
-hide_labels: false
-hide_conf: false
+source: null
 vid_stride: 1
-line_thickness: 3
+stream_buffer: false
 visualize: false
 augment: false
 agnostic_nms: false
 classes: null
 retina_masks: false
-boxes: true
+embed: null
+show: false
+save_frames: false
+save_txt: false
+save_conf: false
+save_crop: false
+show_labels: true
+show_conf: true
+show_boxes: true
+line_width: null
 format: torchscript
 keras: false
 optimize: false
 int8: false
 dynamic: false
 simplify: false
-opset: 17
+opset: null
 workspace: 4
 nms: false
 lr0: 0.01
 lrf: 0.01
 momentum: 0.937
-weight_decay: 0.001
+weight_decay: 0.0005
 warmup_epochs: 3.0
 warmup_momentum: 0.8
-warmup_bias_lr: 0.1
+warmup_bias_lr: 0.0
 box: 7.5
 cls: 0.5
 dfl: 1.5
-fl_gamma: 0.0
+pose: 12.0
+kobj: 1.0
 label_smoothing: 0.0
 nbs: 64
 hsv_h: 0.015
@@ -78,14 +89,18 @@ hsv_s: 0.7
 hsv_v: 0.4
 degrees: 0.0
 translate: 0.1
-scale: 0.9
+scale: 0.5
 shear: 0.0
 perspective: 0.0
 flipud: 0.0
 fliplr: 0.5
+bgr: 0.0
 mosaic: 1.0
-mixup: 0.1
-copy_paste: 0.1
+mixup: 0.0
+copy_paste: 0.0
+auto_augment: randaugment
+erasing: 0.4
+crop_fraction: 1.0
 cfg: null
-v5loader: false
-save_dir: runs/segment/yolov8m_NewData4
+tracker: botsort.yaml
+save_dir: projects/outputSticker
